[tool.poetry]
name = "poetry-env-within-env"
version = "0.1.0"
description = ""
authors = ["Emmanuel Valaquio <v-emmanuel.valaquio@lionbridge.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mypy = "^0.910"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
